Fix Swagger & All Routes
